--- a/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
+++ b/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
@@ -31,6 +31,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ScintillaNET, Version=3.5.6.0, Culture=neutral, processorArchitecture=MSIL">
