--- a/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
+++ b/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
@@ -51,6 +51,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CharacterRange.cs" />
+    <Compile Include="FindAllResults\FindAllResultsPanel.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="FindAllResults\FindAllResultsPanel.Designer.cs">
+      <DependentUpon>FindAllResultsPanel.cs</DependentUpon>
+    </Compile>
     <Compile Include="FindReplace\FindOption.cs" />
     <Compile Include="FindReplace\FindReplace.cs" />
     <Compile Include="FindReplace\FindReplaceDialog.cs">
@@ -86,6 +92,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="FindAllResults\FindAllResultsPanel.resx">
+      <DependentUpon>FindAllResultsPanel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="FindReplace\FindReplaceDialog.resx">
       <DependentUpon>FindReplaceDialog.cs</DependentUpon>
     </EmbeddedResource>
