Fixing FindNext() and FindPrevious() on Replace Tab
Fixed the FindNext() and FindPrevious() methods of the FindReplaceDialog
class so that search text is synchronized across both tabs before
searching. This allows them to be called via keyboard shortcuts (or some
other method) while on the Replace tab and function as expected.

--- a/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
+++ b/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
@@ -58,7 +58,9 @@
       <DependentUpon>FindAllResultsPanel.cs</DependentUpon>
     </Compile>
     <Compile Include="FindReplace\FindOption.cs" />
-    <Compile Include="FindReplace\FindReplace.cs" />
+    <Compile Include="FindReplace\FindReplace.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="FindReplace\FindReplaceDialog.cs">
       <SubType>Form</SubType>
     </Compile>
