--- a/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
+++ b/ScintillaNet FindReplaceDialog/ScintillaNET FindReplaceDialog.csproj
@@ -32,6 +32,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    <DocumentationFile>bin\Release\ScintillaNET FindReplaceDialog.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="ScintillaNET, Version=3.5.10.0, Culture=neutral, processorArchitecture=MSIL">
