fixed some little thing, new nugetpack

--- a/NuGet.Packager/Package.nuspec
+++ b/NuGet.Packager/Package.nuspec
@@ -29,8 +29,8 @@
     <tags></tags>
   </metadata>
   <files>
-    <file src="lib\" target="lib" />
-    <file src="tools\" target="tools" />
-    <file src="content\" target="content" />
+    <file src="lib\**" target="lib" />
+    <file src="tools\**" target="tools" />
+    <file src="content\**" target="content" />
   </files>
 </package>
