--- a/NuGet.Packager/NuGet.Packager.csproj
+++ b/NuGet.Packager/NuGet.Packager.csproj
@@ -54,6 +54,7 @@
     <None Include="NuGet.exe" />
     <None Include="NuGet.config" />
     <None Include="Package.nuspec" />
+    <None Include="packages.config" />
     <None Include="tools\init.ps1" />
     <None Include="tools\install.ps1" />
     <None Include="tools\uninstall.ps1" />
