--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -88,7 +88,8 @@ jobs:
       run: |
         $nuget_config_bytes = [System.Convert]::FromBase64String("${{ secrets.NUGETCONFIG }}")
         $currentDirectory = Get-Location
-        $nugetConfigFile = Join-Path -Path $currentDirectory -ChildPath "nuget.config"
+        $nugetConfigFile = Join-Path -Path $currentDirectory -ChildPath "nuget.config"        
+        Write-Output "NuGet config: $nugetConfigFile"
         [IO.File]::WriteAllBytes("$nugetConfigFile", $nuget_config_bytes)
     - name: NuGet push
       if: ${{ github.event_name != 'pull_request' }}
