--- a/ScintillaNet_FindReplaceDialog/ScintillaNET_FindReplaceDialog.csproj
+++ b/ScintillaNet_FindReplaceDialog/ScintillaNET_FindReplaceDialog.csproj
@@ -93,6 +93,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <EmbeddedResource Update="Properties\Resources.de.resx" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\Clock.ico" />
